[project]
name = "kafka-chat"
version = "0.3.0"
description = "kafka python chat"
authors = [
    {name = "jiwon1118", email = "b23386585@gmail.com"},
]
dependencies = ["tqdm>=4.67.1", "kafka-python>=2.1.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
chatpro = "kafka_chat.chat_pro:chatpro"
